Setting up admin API over HTTP
