# admin/api/docs/openapi/swagger.json
@@ -20,5 +20,72 @@
     },
     "host": "localhost:9999",
     "basePath": "/",
-    "paths": {}
+    "paths": {
+        "/services": {
+            "get": {
+                "description": "Return the services information fetching information from the configuration.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Return the list of current services.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/http.ListServicesResponseHTTP"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.APIErrorHTTP"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "http.APIErrorHTTP": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Some information not found"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 404
+                }
+            }
+        },
+        "http.ListServicesResponseHTTP": {
+            "type": "object",
+            "properties": {
+                "services": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/http.ServiceResponseHTTP"
+                    }
+                }
+            }
+        },
+        "http.ServiceResponseHTTP": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
