# admin/api/pkg/admin/response.go
@@ -1,0 +1,5 @@
+package admin
+
+type ListServicesResponse struct {
+	Services []Service
+}
